# mcp-client-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  llamacpp.md
src/: LLM.cpp  LLM.h  agent.cpp  browser_agent_real.cpp  encapsule.cpp  encapsule.h  example-main.cpp  https_test.cpp  llm_server.cpp  main.cpp  mcp_server.cpp
